--- a/backend/app/scripts/data/system_config.json
+++ b/backend/app/scripts/data/system_config.json
@@ -1,17 +1,17 @@
 [
   {
     "id": 1,
-    "title": "FastAPI Vue Admin",
+    "title": "系统",
     "favicon": "http://localhost:8001/api/v1/static/image/favicon.ico",
     "logo": "http://localhost:8001/api/v1/static/image/logo.png",
     "background": "http://localhost:8001/api/v1/static/image/background.png",
-    "description": "FastAPI Vue Admin 是完全开源的权限管理系统",
-    "copyright": "Copyright © 2021-2025 fastapi-vue-admin.com 版权所有",
+    "copyright": "Copyright © 2021-2025 Lunz 版权所有",
     "keep_record": "晋ICP备18005113号-3",
-    "help_url": "https://gitee.com/tao__tao/fastapi_vue3_admin.git",
-    "privacy_url": "https://gitee.com/tao__tao/fastapi_vue3_admin/blob/master/LICENSE",
-    "clause_url": "https://gitee.com/tao__tao/fastapi_vue3_admin/blob/master/LICENSE",
-    "code_url": "https://gitee.com/tao__tao/fastapi_vue3_admin.git",
+    "help_url": "https://github.com/redgreat/padm.git",
+    "privacy_url": "https://github.com/redgreat/padm/blob/main/LICENSE",
+    "clause_url": "https://github.com/redgreat/padm/blob/main/LICENSE",
+    "code_url": "https://github.com/redgreat/padm.git",
+    "description": "DBA使用数据库运维管理系统",
     "creator_id": 1
   }
 ]
